# inter-season-pricing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: elo_delta_feature_calculation.ipynb  rem050625.ipynb  throwaway.ipynb
pricing/format/: match_logs.py  transfer.py
pricing/models/: club_elo.py  fbref.py  transfermarkt.py
pricing/scripts/: create_unique_clubs.py  get_post_transfer_match_logs.py  get_relevant_transfers.py  get_team_elos_from_club_elo.py  get_team_names.py  get_test_match_logs.py  get_train_match_logs.py  get_transferred_players_to_scrape.py  pipeline.py
pricing/scripts/format/: add_club_elos_to_match_logs.py  format_club_elos.py
